objects/evSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Data_Import_Wizard_URL__c</fullName>
        <label>Data Import Wizard URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Team_Member_Partner_1__c</fullName>
        <inlineHelpText>ID of the user who needs to be added to event&apos;s on which Event Team Member Partner 2 is a team member on.</inlineHelpText>
        <label>Event Team Member Partner 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Team_Member_Partner_2__c</fullName>
        <inlineHelpText>ID of the user who needs to be added to event&apos;s on which Event Team Member Partner 1 is a team member on.</inlineHelpText>
        <label>Event Team Member Partner 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number_Format_REGEX__c</fullName>
        <inlineHelpText>Regular Expression used to validate the format for mobile number fields</inlineHelpText>
        <label>Mobile Number Format REGEX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number_Format_description__c</fullName>
        <inlineHelpText>Error message returned on page with example format</inlineHelpText>
        <label>Mobile Number Format description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Format_REGEX__c</fullName>
        <inlineHelpText>Regular Expression used to validate the format for phone number fields</inlineHelpText>
        <label>Phone Number Format REGEX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Format_description__c</fullName>
        <inlineHelpText>Error message return on page with example format</inlineHelpText>
        <label>Phone Number Format description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Page_Name__c</fullName>
        <label>RSVP Page Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Base_URL__c</fullName>
        <label>Site Base URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_File_Path__c</fullName>
        <label>Template File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>evSetting</label>
    <pluralLabel>evSettings</pluralLabel>
</CustomObject>